build_files/test/lib/error/sources/error.c
/*
** EPITECH PROJECT, 2025
** llist - error.c
** File description:
** <description>
*/

void error_exist(void)
{
}
